--- a/tasks/configure-apcu.yml
+++ b/tasks/configure-apcu.yml
@@ -25,7 +25,7 @@
     force: true
     mode: 0644
   with_items: "{{ php_extension_conf_paths }}"
-  when: php_enable_apc
+  when: php_enable_apc | bool
   notify: restart webserver
 
 - name: Remove APCu config file if APC is disabled.
