--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,7 +4,7 @@
 php_enablerepo: ""
 
 # Default PHP version to install on Debian-based OSes.
-php_default_version_debian: "7.0"
+php_default_version_debian: "7.2"
 
 # PHP package state; use 'present' to make sure it's installed, or 'latest' if
 # you want to upgrade or switch versions using a new repo.
@@ -46,6 +46,10 @@ php_opcache_blacklist_filename: ""
 php_enable_apc: true
 php_apc_shm_size: "96M"
 php_apc_enable_cli: "0"
+
+# Manage PHP CLI memory limit.
+php_set_cli_memory_limit: False
+php_cli_memory_limit: "512M"
 
 # If this is set to false, none of the following options will have any effect.
 # Any and all changes to /etc/php.ini will be your responsibility.
