--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -68,3 +68,5 @@
 - include_tasks: configure-apcu.yml
 - include_tasks: configure-opcache.yml
 - include_tasks: configure-fpm.yml
+- include_tasks: configure-cli.yml
+
