--- a/tasks/setup-Debian.yml
+++ b/tasks/setup-Debian.yml
@@ -1,8 +1,10 @@
 ---
 - name: Update apt cache.
+  become: True
   apt: update_cache=yes cache_valid_time=86400
 
 - name: Ensure PHP packages are installed.
+  become: True
   apt:
     name: "{{ php_packages + php_packages_extra }}"
     state: "{{ php_packages_state }}"
@@ -11,6 +13,7 @@
   notify: restart webserver
 
 - name: Delete APCu configuration file if this role will provide one.
+  become: True
   file:
     path: "{{ item }}/{{ php_apc_conf_filename }}"
     state: absent
@@ -19,6 +22,7 @@
   notify: restart webserver
 
 - name: Delete OpCache configuration file if this role will provide one.
+  become: True
   file:
     path: "{{ item }}/{{ php_opcache_conf_filename }}"
     state: absent
